# potter

./: .gitignore  ARCHITECTURE.md  AUTO_UPDATE_TEST_RESULTS.md  BUGS.md  CHANGELOG.md  CLAUDE.md  DISTRIBUTION.md  FUTURE_PLANS.md  INSTALLATION.md  Makefile  PHASE_2_COMPLETE.md  PHASE_2_PROGRESS.md  PHASE_3_COMPLETION_SUMMARY.md  PHASE_3_PROGRESS.md  PHASE_4_COMPLETION_SUMMARY.md  PHASE_4_UI_REFACTORING.md  PHASE_5_API_INTEGRATION.md  PHASE_5_COMPLETION_SUMMARY.md  PHASE_6_ADVANCED_CONFIGURATION.md  PHASE_6_COMPLETION_SUMMARY.md  PHASE_7_PERFORMANCE_MONITORING.md  PLAN-dynamic-models.md  PRIVACY_POLICY.md  Potter.spec  README.md  REFACTORING_PLAN.md  REFACTORING_PROGRESS.md  REFACTORING_SUMMARY.md  Rephrasely.spec  TEST_INFRASTRUCTURE.md  UNINSTALL.md  app_icon.icns  build_app.py  cocoa_settings.py  context.md  create_dmg_working.py  debug_actual_paths.py  debug_double_click.py  debug_test.py  entitlements-appstore.plist  (+42 more)
.githooks/: pre-commit
.squad/: config.yaml  pr_template.md
assets/: AppIcon.icns  create_dmg_background.py
config/: example_settings.json
distribution/: .gitkeep  BUILD_INFO.md  README.md  launch_helper.sh
docs/: AUTOUPDATE_FLOW.md  AUTO_UPDATE_SETUP.md  CNAME  CODE_SIGNING_SETUP.md  DISTRIBUTION.md  INSTALLATION.md  SETUP_GITHUB_RELEASES.md  UI_GUIDE.md  UNINSTALL.md  index.html
releases/: .gitkeep  appcast.xml
scripts/: build_app.py  build_appstore.sh  build_for_distribution.sh  build_swift_app.py  codename_utils.py  commit_no_verify.sh  create_dmg.sh  create_github_release.sh  demo_distribution.sh  manual_release.sh  pre_commit_hook.sh  (+12 more)
(+240 files in other folders)
